ci-cd/spinnaker/spinnaker-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-gate
  name: spin-gate-public
  namespace: spinnaker
spec:
  ports:
  - port: 8084
    protocol: TCP
    targetPort: 8084
  selector:
    app: spin
    cluster: spin-gate
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-deck
  name: spin-deck-public
  namespace: spinnaker
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: spin
    cluster: spin-deck
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin-ingress
  namespace: spinnaker
spec:
  rules:
  - host: spinnaker.teko.vn
    http:
      paths:
      - backend:
          serviceName: spin-gate-public
          servicePort: 8084
  - host: spinnaker-api.teko.vn
    http:
      paths:
      - backend:
          serviceName: spin-deck-public
          servicePort: 9000
